<resources>
    <string name="app_name">Health Monitor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Health Monitor</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_login">Login to your app</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_loginButton">Login</string>
    <string name="login_forgotPassword">Forgot password?</string>
    <string name="login_registerButton">register</string>
    <string name="menu_register">Register</string>
    <string name="register_username">Username</string>
    <string name="backButton">Back</string>
    <string name="register_passwordConfirm">Confirm Password</string>
    <string name="register_registerButton">Register</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_product_id">Product ID</string>
    <string name="menu_co2">CO2</string>
    <string name="menu_temperature">Temperature</string>
    <string name="menu_humidity">Humidity</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_noise">Noise</string>
    <string name="profile_name">Name</string>
    <string name="profile_last_name">Surname</string>
    <string name="example_name">Example Name</string>
    <string name="example_last_name">Example Last Name</string>
    <string name="example_email">example@email.com</string>
    <string name="example_product_id">123456789</string>
    <string name="profile_change_password">Change Password</string>
    <string name="profile_delete_account">Delete Account</string>
    <string name="change_password_old_password">Old Password</string>
    <string name="change_password_new_password">New Password</string>
    <string name="change_password_confirm_new_password">Confirm New Password</string>
    <string name="profile_log_out">Log Out</string>
    <string name="profile_enter_your_password">Enter your password</string>
    <string name="profile_confirm">Confirm</string>
    <string name="home_temperature">Temperature:</string>
    <string name="home_humidity">Humidity:</string>
    <string name="home_refresh_button">Refresh</string>
    <string name="home_co2">CO2:</string>
    <string name="home_noise">Noise:</string>
    <string name="home_green_condition">Excellent indoor conditions</string>
    <string name="home_poor_indoor_condition">Inadequate indoor conditions</string>
    <string name="home_dangerous_indoor_conditions">Dangerous indoor conditions</string>
    <string name="nav_logged_in_as">Logged in as</string>
    <string name="nav_user">User</string>
    <string name="change_chart">Change chart</string>

    <string-array name="weeks">
        <item>week 22</item>
        <item>week 23</item>
        <item>week 24</item>
        <item>week 25</item>
        <item>week 26</item>
        <item>week 27</item>
        <item>week 28</item>
        <item>week 29</item>
    </string-array>

</resources>
